[fb] fixed some bugs, excluded STR_EQ from FixedScopedPreferenceStore